force-app/main/default/objects/Cart_Item__c/fields/Cart__c.field-meta.xml
<CustomField>

    
        <fullName>Cart__c</fullName>
        <label>Cart</label>
        <type>MasterDetail</type>
        <referenceTo>Cart__c</referenceTo>
        <relationshipName>Cart_Items</relationshipName>
    
</CustomField>