force-app/main/default/objects/Cart_Item__c/fields/Price__c.field-meta.xml
<CustomField>

    
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Currency</type>
        <scale>2</scale>
        <precision>18</precision>
    
</CustomField>