force-app/main/default/objects/Cart_Item__c/fields/Product__c.field-meta.xml
<CustomField>

    
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Lookup</type>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Cart_Items</relationshipName>
    
</CustomField>