force-app/main/default/objects/Cart_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>

    
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <type>Number</type>
        <scale>0</scale>
        <precision>18</precision>
        <defaultValue>1</defaultValue>
    
</CustomField>