force-app/main/default/objects/Cart_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>

    
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
        <formula>Quantity__c * Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    
</CustomField>